# Codex-Skin

./: .gitignore  README.en.md  README.md  design-qa.md  index.html  package-lock.json  package.json  theme-repository.json
.github/workflows/: build.yml  ci.yml  release-client.yml  release-official-themes.yml  release-sample.yml
docs/: cross-platform-architecture.md  design-compliance.md  dreamskin-compatibility.md  publish-signed-sample.md  theme-authoring.md  theme-repository-v1.md
docs/releases/: v0.2.0.md  v0.3.0.md  v0.4.0.md  v0.4.1.md  v0.4.2.md  v0.5.0.md  v0.6.0.md  v0.6.1.md  v0.6.2.md  v0.6.3.md  v0.6.4.md  v0.6.5.md
installer/macos/: Info.plist  build-pkg.sh
installer/windows/: CodexThemeStore.iss
patches/: codex-dream-skin-macos.patch  codex-skin-store.patch
qa/: Capture-CdpScreenshot.ps1  README.md  codex-fixture.html
samples/dreamskin/: README.md  catalog-entry.json  codex-skin-sample-1.0.0.dreamskin  public-keys.json
src/: main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: authoring.rs  catalog.rs  cdp.rs  compiler.rs  dreamskin.rs  error.rs  lib.rs  main.rs  models.rs  paths.rs  platform.rs  protocol.rs  repository.rs  updater.rs
src/CodexThemeStore.Cli/: CodexThemeStore.Cli.csproj  Program.cs
src/CodexThemeStore.Core/: CdpThemeInjector.cs  CodexPlatform.cs  CodexThemeRuntime.cs  CodexThemeStore.Core.csproj  DreamSkinDownloadService.cs  DreamSkinPackageInstaller.cs  (+7 more)
templates/: theme-v1.template.json
tests/: dreamskin-catalog-fixtures.test.mjs  dreamskin-fixture.test.mjs  release-contract.test.mjs
themes/: dilraba-star.json  enfp-pop.json  jackson-sage.json  kun-stage.json  zhu-xudan-racing.json
(+41 files in other folders)
