[package]
name = "codex-skin"
version = "0.6.0"
description = "Codex Desktop theme client"
authors = ["Codex Skin"]
edition = "2024"
default-run = "codex-skin"

[lib]
name = "codex_skin_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "catalog-tool"
path = "src/bin/catalog-tool.rs"

[[bin]]
name = "dreamskin-verify"
path = "src/bin/dreamskin-verify.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
atomicwrites = "0.4"
base64 = "0.22"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
dirs = "6"
ed25519-dalek = "2"
futures-util = "0.3"
hex = "0.4"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "webp", "avif"] }
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream", "json"] }
semver = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_jcs = "0.1"
sha2 = "0.10"
sysinfo = "0.37"
tauri = { version = "2", features = [] }
tauri-plugin-deep-link = "2"
tauri-plugin-single-instance = { version = "2", features = ["deep-link"] }
tempfile = "3"
thiserror = "2"
tokio = { version = "1", features = ["fs", "process", "time", "sync", "macros", "rt-multi-thread"] }
tokio-tungstenite = "0.27"
url = "2"
uuid = { version = "1", features = ["v4"] }
walkdir = "2"
zip = { version = "4", default-features = false, features = ["deflate"] }

[target.'cfg(windows)'.dependencies]
winreg = "0.55"
windows = { version = "0.61", features = [
  "Win32_Foundation",
  "Win32_System_Com",
  "Win32_System_Threading",
  "Win32_UI_Shell"
] }
